--- a/package.json
+++ b/package.json
@@ -1,5 +1,67 @@
 {
     "name": "northern-bear",
     "version": "1.0.0",
-    "license": "ISC"
+    "license": "ISC",
+    "scripts": {
+        "serve": "webpack-dev-server --config webpack/dev.js",
+        "lint": "eslint --ext .js,.ts --fix .",
+        "build": "webpack --config webpack/prod.js"
+    },
+    "husky": {
+        "hooks": {
+            "pre-commit": "lint-staged"
+        }
+    },
+    "lint-staged": {
+        "*.js": [
+            "eslint",
+            "git add"
+        ]
+    },
+    "browserslist": [
+        "last 3 version",
+        "> 1%"
+    ],
+    "devDependencies": {
+        "@babel/core": "^7.5.5",
+        "@babel/plugin-transform-runtime": "^7.5.5",
+        "@babel/preset-env": "^7.5.5",
+        "@babel/runtime": "^7.5.5",
+        "@typescript-eslint/eslint-plugin": "^1.13.0",
+        "@typescript-eslint/parser": "^1.13.0",
+        "autoprefixer": "^9.6.1",
+        "babel-loader": "^8.0.6",
+        "clean-webpack-plugin": "^3.0.0",
+        "css-loader": "^3.1.0",
+        "css-mqpacker": "^7.0.0",
+        "cssnano": "^4.1.10",
+        "eslint": "^6.1.0",
+        "eslint-config-airbnb-base": "^13.2.0",
+        "eslint-import-resolver-webpack": "^0.11.1",
+        "eslint-loader": "^2.2.1",
+        "eslint-plugin-import": "^2.18.2",
+        "eslint-plugin-prettier": "^3.1.0",
+        "file-loader": "^4.1.0",
+        "html-loader": "^0.5.5",
+        "html-webpack-plugin": "^3.2.0",
+        "husky": "^3.0.2",
+        "lint-staged": "^9.2.1",
+        "mini-css-extract-plugin": "^0.8.0",
+        "postcss": "^7.0.17",
+        "postcss-loader": "^3.0.0",
+        "prettier": "^1.18.2",
+        "pug": "^2.0.4",
+        "pug-loader": "^2.4.0",
+        "style-loader": "^0.23.1",
+        "stylus": "^0.54.5",
+        "stylus-loader": "^3.0.2",
+        "ts-loader": "^6.0.4",
+        "typescript": "^3.5.3",
+        "uglifyjs-webpack-plugin": "^2.2.0",
+        "url-loader": "^2.1.0",
+        "webpack": "^4.39.0",
+        "webpack-cli": "^3.3.6",
+        "webpack-dev-server": "^3.7.2",
+        "webpack-merge": "^4.2.1"
+    }
 }
